New files + link to them
Added char generator + link from main page.

--- a/bitd/index.html
+++ b/bitd/index.html
@@ -298,6 +298,10 @@
 
 	<!-- Koniec kolumny z mapą-->
 
+	<!-- START Link do generatora postaci -->
+	<a href="generator_postaci.html">Generator Postaci</a>
+	<!-- KONIEC Link do generatora postaci -->
+
 	<!-- ---------- Modal dzielnice ---------- -->
 	<!-- This modal is filled dynamically through JS. Can add downloading JSON data by AJAX, so everything is synced and updated for every client. -->
 	<!-- IDs of each content should be similar to SVG path IDs eg. Pierwomurze_modal or Wronia-Stopa_modal -->
