--- a/bitd/generator_postaci.html
+++ b/bitd/generator_postaci.html
@@ -4,6 +4,7 @@
 </title>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 	<script>
 		// Main tables with things to be rolled.
 		var cecha = [
@@ -305,6 +306,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet"> 
+	
 	<style>
 		body {
 			font-family: 'Open Sans', sans-serif;
