Link update in index.html, added new generators.

--- a/bitd/index.html
+++ b/bitd/index.html
@@ -299,7 +299,8 @@
 	<!-- Koniec kolumny z mapą-->
 
 	<!-- START Link do generatora postaci -->
-	<a href="generator_postaci.html">Generator Postaci</a>
+	<hr>
+	<center><a href="generator.html" style="font-size: small">Generatory</a></center>
 	<!-- KONIEC Link do generatora postaci -->
 
 	<!-- ---------- Modal dzielnice ---------- -->
