--- a/bitd/generator.html
+++ b/bitd/generator.html
@@ -1,6 +1,6 @@
 <html>
 <title>
-	Generator postaci - Ostrza w Mroku
+	Generatory - Ostrza w Mroku
 </title>
 
 <head>
@@ -440,7 +440,7 @@
 			"Wytwornie",
 			"Pusto",
 			"Zmurszale",
-			"Ciaso",
+			"Ciasno",
 			"Głośno",
 			"Przytulnie",
 			"Ciepło"
@@ -451,7 +451,7 @@
 			"Mgła, opary, szron",
 			"Ulotne sylwetki, echa w polu duchowym",
 			"Sadza, chmury popiołu, brud",
-			"Wyładowania elektryczne, kablemechanizmy"
+			"Wyładowania elektryczne, kable, mechanizmy"
 		]
 		var odczuciaDzwiekowe = [
 			"Maszyneria, robotnicy",
@@ -532,7 +532,7 @@
 			"Zagospodarowane dachy",
 			"Uliczni artyści",
 			"Dyby, publiczna kara",
-			"Plac budowy wyburzenia",
+			"Plac budowy, wyburzenia",
 			"Upiorna pustka",
 			"Mechanizmy zegarowe",
 			"Tory, wagony kolejowe",
@@ -849,23 +849,23 @@
 			display: inline-block;
 			outline: none;
 			cursor: pointer;
-			font-size: 14px;
+			font-size: 0.75rem;
 			line-height: 1;
 			border-radius: 500px;
 			transition-property: background-color, border-color, color, box-shadow, filter;
 			transition-duration: .3s;
 			border: 1px solid transparent;
 			letter-spacing: 2px;
-			min-width: 160px;
+			min-width: 6rem;
 			text-transform: uppercase;
 			white-space: normal;
 			font-weight: 700;
 			text-align: center;
-			padding: 16px 14px 18px;
+			padding: 1rem;
 			color: var(--text-muted);
 			box-shadow: inset 0 0 0 2px var(--text-muted);
 			background-color: transparent;
-			height: 48px;
+			height: 1rem;
 			margin: 0px;
 		}
 
@@ -905,6 +905,9 @@
 		tr:nth-child(even) {
 			background: rgb(226, 226, 226)
 		}
+
+		
+
 	</style>
 </head>
 
