--- a/bitd/generator.html
+++ b/bitd/generator.html
@@ -866,7 +866,7 @@
 			box-shadow: inset 0 0 0 2px var(--text-muted);
 			background-color: transparent;
 			height: 1rem;
-			margin: 0px;
+			margin: 1rem;
 		}
 
 		button:hover {
