--- a/bitd/index.html
+++ b/bitd/index.html
@@ -165,6 +165,11 @@
 			border-style: solid;
 			border-color: white;
 		}
+
+		#links {
+			text-align: center;
+			font-size: small;
+		}
 	</style>
 
 </head>
@@ -300,7 +305,10 @@
 
 	<!-- START Link do generatora postaci -->
 	<hr>
-	<center><a href="generator.html" style="font-size: small">Generatory</a></center>
+	<div id="links">
+		<a href="generator.html">Generatory</a> | 
+		<a href="zoomableMap.html">Duża Mapa</a>
+	</div>
 	<!-- KONIEC Link do generatora postaci -->
 
 	<!-- ---------- Modal dzielnice ---------- -->
