Devil bargain page

--- a/bitd/index.html
+++ b/bitd/index.html
@@ -307,7 +307,8 @@
 	<hr>
 	<div id="links">
 		<a href="generator.html">Generatory</a> | 
-		<a href="zoomableMap.html">Duża Mapa</a>
+		<a href="zoomableMap.html">Duża Mapa</a> | 
+		<a href="db.html">Czarci Targ</a>
 	</div>
 	<!-- KONIEC Link do generatora postaci -->
 
