Updated db.html for mobile view.

--- a/bitd/db.html
+++ b/bitd/db.html
@@ -22,9 +22,7 @@
 		}
 
 		#dbImg {
-			width: 420px;
-			height: 560px;
-			margin: auto;
+			text-align: center;
 		}
 		#btnContainer {
 			text-align: center;
@@ -36,8 +34,8 @@
 <body>
 	<!-- Kolumna z mapą -->
 	<div class="container">
-			<div id="dbImg"></div>
-			<div id="btnContainer"><button id="newDB">New Devil's Bargain</button></div>
+		<div id="btnContainer"><button id="newDB">New Devil's Bargain</button></div>
+		<div id="dbImg"></div>		
 	</div>
 	<script>
 		function randBetween(min, max) {
